TEST_PROGRAMS/VALID/08/structs.go
package main;
type point3d struct{
    x,y,z int;
}
func main(){
    var p point3d;
    p.x = 1;
    p.y = 2;
    p.z = 3;
}
